# sabidb

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
app/: build_samples.rs
app/embedded/: main.rs  utils.rs
docs/: refactoring_log_01.md
docs/samples/: setup.sql
sabidb/demo/: depts.tbl  fldcat.tbl  students.tbl  tblcat.tbl
sabidb/studentdb/: courses.tbl  fldcat.tbl  idxcat.tbl  students.tbl  tblcat.tbl
src/: constants.rs  main.rs  mod.rs
src/buffer/: buffer.rs  buffer_manager.rs
src/file/: block_id.rs  file_manager.rs  page.rs
src/index/: index.rs  mod.rs
src/log/: log_iterator.rs  log_manager.rs  log_mgr.rs
src/materialize/: aggregation_fn.rs  count_fn.rs  group_by_plan.rs  group_by_scan.rs  group_value.rs  materialize_plan.rs  max_fn.rs  merge_join_plan.rs  merge_join_scan.rs  mod.rs  record_comparator.rs  sort_plan.rs  sort_scan.rs  temp_table.rs
src/metadata/: index_info.rs  index_manager.rs  matadata_manager.rs  mod.rs  stat_info.rs  stat_manager.rs  table_manager.rs  view_manager.rs
src/multibuffer/: buffer_needs.rs  chunk_scan.rs  mod.rs  multibuffer_product_plan.rs  multibuffer_product_scan.rs
src/opt/: heuristic_query_planner.rs  table_planner.rs
src/parse/: create_index_data.rs  create_table_data.rs  create_view_data.rs  delete_data.rs  insert_data.rs  lexer.rs  mod.rs  modify_data.rs  parser.rs  pred_parser.rs  query_data.rs
src/plan/: basic_query_planner.rs  basic_update_planner.rs  better_query_planner.rs  mod.rs  optimized_product_plan.rs  plan.rs  planner.rs  product_plan.rs  (+5 more)
studentdb/: fldcat.tbl
(+60 files in other folders)
