[package]
name = "sabidb"
version = "0.1.0"
edition = "2021"

[dependencies]
tempfile = "3.17.1"
chrono = "0.4.39"
lazy_static = "1.4.0"
rand = "0.9.0"
clap = { version = "4.5.37", features = ["derive"] }

[lib]
name = "sabidb"
path = "src/mod.rs"

[[bin]]
name = "embedded"
path = "app/embedded/main.rs"